--- a/styles.scss
+++ b/styles.scss
@@ -2,8 +2,9 @@
 
 $font-body: "Roboto Slab" , sans-serif;
 $color-primary: rgb(255, 255, 255);
-$color-secondary:rgb(156, 153, 70);
-$color-tertiary: rgb(239, 131, 16);
+$color-secondary:rgb(199, 57, 69);
+$color-tertiary: rgb(239, 116, 16);
+$color-text: rgb(82, 74, 69); 
 
 * {
     font-family: $font-body;
@@ -21,13 +22,45 @@ header {
 }
 
 #header-name {
-    
+    color:$color-secondary;
+    font-size: 60px;
+    margin: 10px;
 }
 
 .nav-link {
     margin: 20px;
     font-weight: 600;
-    color: rgb(255, 123, 0);
+    color: $color-tertiary;
+}
+
+#karin-picture {
+    width: auto;
+    height: 450px;
+    border-radius: 30px;
+    box-shadow: 10px 10px $color-tertiary;
+}
+
+#introduction {
+    font-size: 55px;
+    padding: 10px;
+    color: $color-text;
+}
+
+#karin {
+    font-style: oblique;
+    color: $color-secondary;
+}
+
+#intro-and-picture {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    padding: 50px;
+}
+
+.heading {
+    color: $color-text
 }
 
 #projects {
@@ -36,25 +69,7 @@ header {
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 5px;
-}
-
-#karin-picture {
-    width: auto;
-    height: 450px;
-    border-radius: 3px;
-}
-
-#introduction {
-    font-size: 55px;
-    padding: 10px;
-}
-
-#intro-and-picture {
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
-    padding: 50px;
+    padding: 100px;
 }
 
 .card {
@@ -62,6 +77,22 @@ header {
     height: 250px;
     width: 300px;
     padding: 10px;
-    margin: 15px;
+    margin: 50px;
 }
 
+#about-me {
+    padding: 20px;
+    background-color: $color-secondary;
+    color: $color-primary;
+    h1 {
+        background-color: $color-secondary;
+        padding-left: 20px;
+        text-shadow: 3px 3px $color-tertiary;
+
+    }
+    p {
+        background-color: $color-secondary;
+        padding: 20px;
+        padding-right: 300px;
+    }
+}
