--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 div {
-  border: 1px solid red;
+  border: 1px solid #871818;
 }
 
 a:link {
@@ -37,6 +37,12 @@ header {
   font-weight: 600;
   font-size: 22px;
   color: #ef7410;
+  transition: 0.3s ease-in-out;
+}
+
+.nav-link:hover {
+  color: #c73953;
+  font-size: 25px;
 }
 
 #contact {
@@ -61,6 +67,7 @@ header {
   width: 800px;
   margin: auto;
   padding: 10px;
+  padding-right: 50px;
   color: #524a45;
 }
 
@@ -83,6 +90,7 @@ header {
 .heading {
   color: #524a45;
   margin-top: 10px;
+  margin-bottom: 75px;
   text-align: center;
   text-shadow: 2px 2px #e49a8b;
 }
@@ -91,17 +99,34 @@ header {
   margin-top: 150px;
 }
 
+#skills-p {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
 #skill-icon-group {
   display: flex;
   justify-content: space-around;
   width: max-content;
   margin: auto;
+  padding-top: 20px;
 }
 
 .skill-icon {
-  margin: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   height: 50px;
   width: auto;
+  transition: 0.15s ease-in-out;
+}
+
+.skill-icon:hover {
+  -webkit-transform: translateY(6px);
+}
+
+.skill-tag {
+  text-align: center;
+  margin: 5px;
 }
 
 #my-projects {
@@ -114,11 +139,13 @@ header {
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: 100px;
+  padding: 20px;
+  margin-bottom: 100px;
 }
 
 .card {
-  border: 1px solid #c73953;
+  border: 1px solid #ef7410;
+  background-color: #ef7410;
   height: 150px;
   width: 200px;
   padding: 10px;
@@ -128,10 +155,10 @@ header {
 #about-me {
   background-color: #c73953;
   color: white;
-  height: 300px;
+  height: auto;
 }
 #about-me h1 {
-  margin: 20px;
+  padding: 20px;
   background-color: #c73953;
   padding-left: 20px;
   text-shadow: 3px 3px #ef7410;
@@ -141,5 +168,15 @@ header {
   font-size: 20px;
   padding: 20px;
   padding-right: 300px;
+  height: auto;
   max-width: 1000px;
+}
+
+footer {
+  height: 100px;
+  background-color: #c73953;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #ef7410;
 }
