--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,18 @@
   padding: 0;
 }
 
+body {
+  width: auto;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 div {
-  border: 1px solid #871818;
+  border: 1px solid #fffefe;
 }
 
 a:link {
@@ -30,6 +40,11 @@ header {
   margin: 10px;
   padding-left: 30px;
   text-shadow: 3px 3px #ef7410;
+  transition: 0.3s ease-in-out;
+}
+
+#header-name:hover {
+  -webkit-transform: translateY(6px);
 }
 
 .nav-link {
@@ -56,18 +71,17 @@ header {
 
 #karin-picture {
   width: auto;
-  height: 500px;
+  height: 400px;
   border-radius: 30px;
-  margin-right: 50px;
   box-shadow: 10px 10px #ef7410;
 }
 
 #introduction {
-  font-size: 55px;
-  width: 800px;
+  font-size: 45px;
+  width: 700px;
   margin: auto;
   padding: 10px;
-  padding-right: 50px;
+  padding-left: 100px;
   color: #524a45;
 }
 
@@ -82,8 +96,7 @@ header {
   align-items: center;
   margin: auto;
   margin-top: 50px;
-  padding: 30px;
-  padding-left: 150px;
+  padding: 20px;
   padding-right: 80px;
 }
 
@@ -107,7 +120,7 @@ header {
 #skill-icon-group {
   display: flex;
   justify-content: space-around;
-  width: max-content;
+  width: auto;
   margin: auto;
   padding-top: 20px;
 }
@@ -143,13 +156,31 @@ header {
   margin-bottom: 100px;
 }
 
+.project-icon {
+  height: auto;
+  width: 180px;
+  margin: 10px;
+}
+
 .card {
   border: 1px solid #ef7410;
+  border-radius: 3px;
+  box-shadow: 5px 5px #c73953;
   background-color: #ef7410;
-  height: 150px;
+  height: auto;
   width: 200px;
   padding: 10px;
   margin: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.card p {
+  background-color: #ef7410;
+  margin: 5px;
+  text-align: center;
+  color: white;
 }
 
 #about-me {
@@ -180,13 +211,11 @@ footer {
   justify-content: space-around;
   align-items: center;
 }
-
-h3 {
+footer h3 {
   background-color: #ef7410;
   color: white;
 }
-
-h4 {
+footer h4 {
   background-color: #ef7410;
   font-style: italic;
   color: white;
@@ -202,4 +231,16 @@ h4 {
   height: 40px;
   width: auto;
   background-color: #ef7410;
+}
+
+@media screen and (max-width: 768px) {
+  .main {
+    width: 100%;
+    height: 60%;
+    flex-wrap: wrap;
+  }
+
+  #skill-icon-group {
+    flex-wrap: wrap;
+  }
 }
