--- a/styles.scss
+++ b/styles.scss
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap');
 
-$font-body: "Roboto Slab" , sans-serif;
+$font-body: "Roboto Slab",
+sans-serif;
 $color-primary: rgb(255, 255, 255);
 $color-secondary:rgb(199, 57, 83);
 $color-tertiary: rgb(239, 116, 16);
 $color-highlight: rgb(228, 154, 139);
-$color-text: rgb(82, 74, 69); 
+$color-text: rgb(82, 74, 69);
 
 * {
     font-family: $font-body;
@@ -16,6 +17,7 @@ $color-text: rgb(82, 74, 69);
 
 body {
     width: auto;
+    margin: auto;
 }
 
 main {
@@ -24,14 +26,10 @@ main {
     flex-grow: 1;
 }
 
-div {
-    border: 1px solid rgb(255, 254, 254);
-}
-
 a:link {
     text-decoration: none;
 }
-    
+
 a:visited {
     text-decoration: none;
 }
@@ -39,11 +37,12 @@ a:visited {
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    width: auto;
+    justify-content: space-between
 }
 
 #header-name {
-    color:$color-secondary;
+    color: $color-secondary;
     font-size: 60px;
     margin: 10px;
     padding-left: 30px;
@@ -86,7 +85,7 @@ header {
 
 #introduction {
     font-size: 45px;
-    width: 700px;
+    width: auto;
     margin: auto;
     padding: 10px;
     padding-left: 100px;
@@ -128,7 +127,7 @@ header {
 #skill-icon-group {
     display: flex;
     justify-content: space-around;
-    width: auto;
+    width: 90%;
     margin: auto;
     padding-top: 20px;
 }
@@ -161,7 +160,8 @@ header {
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 20px;
-    margin-bottom: 100px;;
+    margin-bottom: 100px;
+    ;
 }
 
 .project-icon {
@@ -183,6 +183,7 @@ header {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+
     p {
         background-color: $color-tertiary;
         margin: 5px;
@@ -195,20 +196,20 @@ header {
     background-color: $color-secondary;
     color: $color-primary;
     height: auto;
-    
+
     h1 {
         padding: 20px;
         background-color: $color-secondary;
         padding-left: 20px;
         text-shadow: 3px 3px $color-tertiary;
     }
+
     p {
         background-color: $color-secondary;
         font-size: 20px;
         padding: 20px;
-        padding-right: 300px;
+        text-align: left;
         height: auto;
-        max-width: 1000px;
     }
 }
 
@@ -224,6 +225,7 @@ footer {
         background-color: $color-tertiary;
         color: $color-primary;
     }
+
     h4 {
         background-color: $color-tertiary;
         font-style: italic;
@@ -232,27 +234,54 @@ footer {
     }
 }
 
-
-
-
 #linkedin {
     text-decoration: none;
     background-color: $color-tertiary;
     color: $color-primary;
-    img {
-        height:40px;
+}
+
+#linkedinimg {
+    height: 40px;
     width: auto;
+    color: $color-primary;
     background-color: $color-tertiary;
-    }
 }
 
 @media screen and (max-width: 768px) {
     .main {
         width: 100%;
-        height:60%;
+        height: 60%;
         flex-wrap: wrap;
     }
+
+    header {
+        flex-direction: column;
+    }
+
+    #into-and-picture {
+        flex-wrap: wrap;
+    }
+
     #skill-icon-group {
         flex-wrap: wrap;
+    }
+
+    #karin-picture {
+        width: auto;
+        height: 200px;
+    }
+
+    #introduction {
+        font-size: 30px;
+    }
+
+    #about-me {
+        height: auto;
+
+        p {
+            font-size: 10px;
+            margin: auto;
+        }
+
     }
 }
