--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ header {
   width: auto;
   height: 400px;
   border-radius: 30px;
+  margin-right: 100px;
   box-shadow: 10px 10px #ef7410;
 }
 
@@ -108,6 +109,9 @@ header {
 
 #technical-skills {
   margin-top: 150px;
+}
+#technical-skills p {
+  font-style: italic;
 }
 
 #skills-p {
@@ -219,13 +223,13 @@ footer h4 {
   font-size: 10px;
 }
 
-#linkedin {
+.footer-link {
   text-decoration: none;
   background-color: #ef7410;
   color: white;
 }
 
-#linkedinimg {
+.footer-img {
   height: 40px;
   width: auto;
   color: white;
@@ -253,7 +257,8 @@ footer h4 {
 
   #karin-picture {
     width: auto;
-    height: 200px;
+    height: 300px;
+    margin: 0;
   }
 
   #introduction {
