--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,12 @@
   padding: 0;
 }
 
-body {
-  width: auto;
-  margin: auto;
+.heading {
+  color: #524a45;
+  margin-top: 10px;
+  margin-bottom: 75px;
+  text-align: center;
+  text-shadow: 2px 2px #e49a8b;
 }
 
 main {
@@ -25,14 +28,13 @@ a:visited {
   text-decoration: none;
 }
 
-header {
+.header {
   display: flex;
   align-items: center;
   width: auto;
   justify-content: space-between;
 }
-
-#header-name {
+.header__logo {
   color: #c73953;
   font-size: 60px;
   margin: 10px;
@@ -40,25 +42,17 @@ header {
   text-shadow: 3px 3px #ef7410;
   transition: 0.3s ease-in-out;
 }
-
-#header-name:hover {
+.header__logo:hover {
   -webkit-transform: translateY(6px);
 }
-
-.nav-link {
+.header__nav__link {
   margin: 20px;
   font-weight: 600;
   font-size: 22px;
   color: #ef7410;
   transition: 0.3s ease-in-out;
 }
-
-.nav-link:hover {
-  color: #c73953;
-  font-size: 25px;
-}
-
-#contact {
+.header__nav__link--contact {
   border: 1px solid #ef7410;
   padding: 10px;
   border-radius: 5px;
@@ -66,29 +60,12 @@ header {
   text-shadow: 0.5px 0.5px #ef7410;
   color: #e49a8b;
 }
-
-#karin-picture {
-  width: auto;
-  height: 400px;
-  border-radius: 30px;
-  box-shadow: 10px 10px #ef7410;
-}
-
-#introduction {
-  font-size: 45px;
-  width: auto;
-  margin: auto;
-  padding: 10px;
-  padding-left: 100px;
-  color: #524a45;
-}
-
-#karin {
-  font-style: oblique;
+.header__nav__link:hover {
   color: #c73953;
+  font-size: 25px;
 }
 
-#intro-and-picture {
+main .intro {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -97,54 +74,57 @@ header {
   padding: 20px;
   padding-right: 80px;
 }
-
-.heading {
+main .intro__text {
+  font-size: 45px;
+  width: auto;
+  margin: auto;
+  padding: 10px;
+  padding-left: 100px;
   color: #524a45;
-  margin-top: 10px;
-  margin-bottom: 75px;
-  text-align: center;
-  text-shadow: 2px 2px #e49a8b;
 }
-
-#technical-skills {
+main .intro__text--emphasis {
+  font-style: oblique;
+  color: #c73953;
+}
+main .intro__img {
+  width: auto;
+  height: 400px;
+  border-radius: 30px;
+  box-shadow: 10px 10px #ef7410;
+  margin-right: 75px;
+}
+main .skills__heading {
   margin-top: 150px;
 }
-
-#skills-p {
+main .skills__intro {
   text-align: center;
   padding-bottom: 50px;
 }
-
-#skill-icon-group {
+main .skills__flex {
   display: flex;
   justify-content: space-around;
   width: 90%;
   margin: auto;
   padding-top: 20px;
 }
-
-.skill-icon {
+main .skills__flex__img {
   margin-left: 30px;
   margin-right: 30px;
   height: 50px;
   width: auto;
   transition: 0.15s ease-in-out;
 }
-
-.skill-icon:hover {
+main .skills__flex__img:hover {
   -webkit-transform: translateY(6px);
 }
-
-.skill-tag {
+main .skills__flex__text {
   text-align: center;
   margin: 5px;
 }
-
-#my-projects {
+main .projects__heading {
   margin-top: 100px;
 }
-
-#projects {
+main .projects__flex {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -153,8 +133,7 @@ header {
   padding: 20px;
   margin-bottom: 100px;
 }
-
-.project-icon {
+main .projects__img {
   height: auto;
   width: 180px;
   margin: 10px;
@@ -200,7 +179,7 @@ header {
   height: auto;
 }
 
-footer {
+.footer {
   height: 100px;
   background-color: #c73953;
   background-color: #ef7410;
@@ -208,24 +187,22 @@ footer {
   justify-content: space-around;
   align-items: center;
 }
-footer h3 {
+.footer__heading {
   background-color: #ef7410;
   color: white;
 }
-footer h4 {
+.footer__rights {
   background-color: #ef7410;
   font-style: italic;
   color: white;
   font-size: 10px;
 }
-
-#linkedin {
+.footer__link {
   text-decoration: none;
   background-color: #ef7410;
   color: white;
 }
-
-#linkedinimg {
+.footer__link__img {
   height: 40px;
   width: auto;
   color: white;
@@ -239,12 +216,15 @@ footer h4 {
     flex-wrap: wrap;
   }
 
-  header {
+  .header {
     flex-direction: column;
   }
 
-  #into-and-picture {
-    flex-wrap: wrap;
+  #intro-and-picture {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   #skill-icon-group {
@@ -254,6 +234,8 @@ footer h4 {
   #karin-picture {
     width: auto;
     height: 200px;
+    margin-bottom: 40px;
+    margin-right: 0;
   }
 
   #introduction {
