--- a/styles.scss
+++ b/styles.scss
@@ -1,24 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap');
+@use "_base" as *;
+@use "_headings" as *;
 
-$font-body: "Roboto Slab",
-sans-serif;
-$color-primary: rgb(255, 255, 255);
-$color-secondary:rgb(199, 57, 83);
-$color-tertiary: rgb(239, 116, 16);
-$color-highlight: rgb(228, 154, 139);
-$color-text: rgb(82, 74, 69);
-
-* {
-    font-family: $font-body;
-    background-color: $color-primary;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    width: auto;
-    margin: auto;
-}
 
 main {
     display: flex;
@@ -34,140 +16,126 @@ a:visited {
     text-decoration: none;
 }
 
-header {
+.header {
     display: flex;
     align-items: center;
     width: auto;
-    justify-content: space-between
-}
+    justify-content: space-between;
 
-#header-name {
-    color: $color-secondary;
-    font-size: 60px;
-    margin: 10px;
-    padding-left: 30px;
-    text-shadow: 3px 3px $color-tertiary;
-    transition: 0.3s ease-in-out;
-}
+    &__logo {
+        color: $color-secondary;
+        font-size: 60px;
+        margin: 10px;
+        padding-left: 30px;
+        text-shadow: 3px 3px $color-tertiary;
+        transition: 0.3s ease-in-out;
+    }
+    &__logo:hover {
+        -webkit-transform: translateY(6px);
+    }
+    &__nav__link {
+        margin: 20px;
+        font-weight: 600;
+        font-size: 22px;
+        color: $color-tertiary;
+        transition: 0.3s ease-in-out;
 
-#header-name:hover {
-    -webkit-transform: translateY(6px);
-}
+        &--contact {
+            border: 1px solid $color-tertiary;
+            padding: 10px;
+            border-radius: 5px;
+            background-color: $color-secondary;
+            text-shadow: 0.5px 0.5px $color-tertiary;
+            color: $color-highlight;
+        }
+    }
+    &__nav__link:hover {
+        color: $color-secondary;
+        font-size: 25px;
+    }
+}    
 
-.nav-link {
-    margin: 20px;
-    font-weight: 600;
-    font-size: 22px;
-    color: $color-tertiary;
-    transition: 0.3s ease-in-out;
-}
-
-.nav-link:hover {
-    color: $color-secondary;
-    font-size: 25px;
-}
-
-#contact {
-    border: 1px solid $color-tertiary;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: $color-secondary;
-    text-shadow: 0.5px 0.5px $color-tertiary;
-    color: $color-highlight;
-}
-
-#karin-picture {
-    width: auto;
-    height: 400px;
-    border-radius: 30px;
-    box-shadow: 10px 10px $color-tertiary;
-}
-
-#introduction {
-    font-size: 45px;
-    width: auto;
-    margin: auto;
-    padding: 10px;
-    padding-left: 100px;
-    color: $color-text;
-}
-
-#karin {
-    font-style: oblique;
-    color: $color-secondary;
-}
-
-#intro-and-picture {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: auto;
-    margin-top: 50px;
-    padding: 20px;
-    padding-right: 80px;
-}
-
-.heading {
-    color: $color-text;
-    margin-top: 10px;
-    margin-bottom: 75px;
-    text-align: center;
-    text-shadow: 2px 2px $color-highlight;
-}
-
-#technical-skills {
-    margin-top: 150px;
-}
-
-#skills-p {
-    text-align: center;
-    padding-bottom: 50px;
-}
-
-#skill-icon-group {
-    display: flex;
-    justify-content: space-around;
-    width: 90%;
-    margin: auto;
-    padding-top: 20px;
-}
-
-.skill-icon {
-    margin-left: 30px;
-    margin-right: 30px;
-    height: 50px;
-    width: auto;
-    transition: 0.15s ease-in-out;
-}
-
-.skill-icon:hover {
-    -webkit-transform: translateY(6px);
-}
-
-.skill-tag {
-    text-align: center;
-    margin: 5px;
-}
-
-#my-projects {
-    margin-top: 100px;
-}
-
-#projects {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 20px;
-    margin-bottom: 100px;
-    ;
-}
-
-.project-icon {
-    height: auto;
-    width: 180px;
-    margin: 10px;
+main {
+    .intro {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: auto;
+        margin-top: 50px;
+        padding: 20px;
+        padding-right: 80px;
+    
+        &__text {
+            font-size: 45px;
+            width: auto;
+            margin: auto;
+            padding: 10px;
+            padding-left: 100px;
+            color: $color-text;
+    
+            &--emphasis {
+                font-style: oblique;
+                color: $color-secondary;
+            }
+        }
+        &__img {
+                width: auto;
+                height: 400px;
+                border-radius: 30px;
+                box-shadow: 10px 10px $color-tertiary;
+                margin-right: 75px;
+            }
+    }
+    .skills {
+        &__heading {
+            
+            margin-top: 150px;
+        }
+        &__intro {
+            text-align: center;
+            padding-bottom: 50px;
+        }
+        &__flex {
+            display: flex;
+            justify-content: space-around;
+            width: 90%;
+            margin: auto;
+            padding-top: 20px;
+            &__img {
+                margin-left: 30px;
+                margin-right: 30px;
+                height: 50px;
+                width: auto;
+                transition: 0.15s ease-in-out;
+            }
+            &__img:hover {
+                -webkit-transform: translateY(6px);
+            }
+            &__text {
+                text-align: center;
+                margin: 5px;
+            }
+        }
+    }
+    .projects {
+        &__heading {
+            margin-top: 100px;
+        }
+        &__flex {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            padding: 20px;
+            margin-bottom: 100px;
+        }
+        &__img {
+            height: auto;
+            width: 180px;
+            margin: 10px;
+        }
+    }
 }
 
 .card {
@@ -213,7 +181,7 @@ header {
     }
 }
 
-footer {
+.footer {
     height: 100px;
     background-color: $color-secondary;
     background-color: $color-tertiary;
@@ -221,31 +189,30 @@ footer {
     justify-content: space-around;
     align-items: center;
 
-    h3 {
+    &__heading {
         background-color: $color-tertiary;
         color: $color-primary;
     }
 
-    h4 {
+    &__rights {
         background-color: $color-tertiary;
         font-style: italic;
         color: $color-primary;
         font-size: 10px;
     }
+    &__link {
+        text-decoration: none;
+        background-color: $color-tertiary;
+        color: $color-primary;
+        &__img {
+            height: 40px;
+            width: auto;
+            color: $color-primary;
+            background-color: $color-tertiary;
+        }
+    }    
 }
 
-#linkedin {
-    text-decoration: none;
-    background-color: $color-tertiary;
-    color: $color-primary;
-}
-
-#linkedinimg {
-    height: 40px;
-    width: auto;
-    color: $color-primary;
-    background-color: $color-tertiary;
-}
 
 @media screen and (max-width: 768px) {
     .main {
@@ -254,12 +221,15 @@ footer {
         flex-wrap: wrap;
     }
 
-    header {
+    .header {
         flex-direction: column;
     }
 
-    #into-and-picture {
-        flex-wrap: wrap;
+    #intro-and-picture {
+        flex-direction: column-reverse;
+        align-items: center;
+        padding-right: 0;
+        padding-left: 0;
     }
 
     #skill-icon-group {
@@ -269,6 +239,8 @@ footer {
     #karin-picture {
         width: auto;
         height: 200px;
+        margin-bottom: 40px;
+        margin-right: 0;
     }
 
     #introduction {
