finished portfolio for now. everything in bem.

--- a/_headings.scss
+++ b/_headings.scss
@@ -1,8 +1,9 @@
 @use "_base" as *;
 
-.heading {
+.headings {
     color: $color-text;
-    margin-top: 10px;
+    font-size: 40px;
+    margin-top: 100px;
     margin-bottom: 75px;
     text-align: center;
     text-shadow: 2px 2px $color-highlight;
