--- a/_headings.css
+++ b/_headings.css
@@ -6,9 +6,10 @@
   padding: 0;
 }
 
-.heading {
+.headings {
   color: #524a45;
-  margin-top: 10px;
+  font-size: 40px;
+  margin-top: 100px;
   margin-bottom: 75px;
   text-align: center;
   text-shadow: 2px 2px #e49a8b;
