--- a/_responsive.scss
+++ b/_responsive.scss
@@ -9,6 +9,10 @@
 
     .header {
         flex-direction: column;
+
+        &__logo {
+            margin-bottom: 30px;
+        }
     }
 
     .intro {
