--- a/_components.css
+++ b/_components.css
@@ -25,7 +25,7 @@ a:visited {
   font-size: 60px;
   margin: 10px;
   padding-left: 30px;
-  text-shadow: 3px 3px #ef7410;
+  text-shadow: 3px 3px #e4790e;
   transition: 0.3s ease-in-out;
 }
 .header__logo:hover {
@@ -35,19 +35,19 @@ a:visited {
   margin: 20px;
   font-weight: 600;
   font-size: 22px;
-  color: #ef7410;
+  color: #524a45;
   transition: 0.3s ease-in-out;
 }
 .header__nav__link--contact {
-  border: 1px solid #ef7410;
+  border: 1px solid #e4790e;
   padding: 10px;
   border-radius: 5px;
   background-color: #c73953;
-  text-shadow: 0.5px 0.5px #ef7410;
-  color: #e49a8b;
+  text-shadow: 0.5px 0.5px #e4790e;
+  color: #ebd8cc;
   transition: 0.3s ease-in-out;
 }
-.header--contact:hover {
+.header__nav__link--contact:hover {
   color: white;
   font-size: 25px;
 }
@@ -81,7 +81,7 @@ main .intro__img {
   width: auto;
   height: 400px;
   border-radius: 30px;
-  box-shadow: 10px 10px #ef7410;
+  box-shadow: 10px 10px #e4790e;
   margin-right: 75px;
 }
 main .skills__heading {
@@ -90,6 +90,7 @@ main .skills__heading {
 main .skills__intro {
   text-align: center;
   padding-bottom: 50px;
+  font-style: italic;
 }
 main .skills__flex {
   display: flex;
@@ -111,6 +112,7 @@ main .skills__flex__img:hover {
 main .skills__flex__text {
   text-align: center;
   margin: 5px;
+  margin-bottom: 20px;
 }
 main .projects__heading {
   margin-top: 100px;
@@ -125,12 +127,12 @@ main .projects__flex {
   margin-bottom: 100px;
 }
 main .projects__flex__card {
-  border: 1px solid #ef7410;
+  border: 1px solid #e4790e;
   border-radius: 3px;
   box-shadow: 5px 5px #c73953;
-  background-color: #ef7410;
+  background-color: #e4790e;
   height: auto;
-  width: 200px;
+  width: 250px;
   padding: 10px;
   margin: 50px;
   display: flex;
@@ -140,14 +142,15 @@ main .projects__flex__card {
 }
 main .projects__flex__card__img {
   height: auto;
-  width: 180px;
+  width: 220px;
   margin: 10px;
 }
 main .projects__flex__card__text {
-  background-color: #ef7410;
+  background-color: #e4790e;
   margin: 12px;
   text-align: center;
   color: white;
+  font-size: 1.25em;
 }
 main .about {
   background-color: #c73953;
@@ -158,7 +161,7 @@ main .about__heading {
   padding: 20px;
   background-color: #c73953;
   padding-left: 20px;
-  text-shadow: 3px 3px #ef7410;
+  text-shadow: 3px 3px #e4790e;
 }
 main .about__text {
   background-color: #c73953;
@@ -171,29 +174,29 @@ main .about__text {
 .footer {
   height: 100px;
   background-color: #c73953;
-  background-color: #ef7410;
+  background-color: #e4790e;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 .footer__heading {
-  background-color: #ef7410;
+  background-color: #e4790e;
   color: white;
 }
 .footer__rights {
-  background-color: #ef7410;
+  background-color: #e4790e;
   font-style: italic;
   color: white;
   font-size: 10px;
 }
 .footer__link {
   text-decoration: none;
-  background-color: #ef7410;
+  background-color: #e4790e;
   color: white;
 }
 .footer__link__img {
   height: 40px;
   width: auto;
   color: white;
-  background-color: #ef7410;
+  background-color: #e4790e;
 }
