--- a/_components.scss
+++ b/_components.scss
@@ -34,7 +34,7 @@ a:visited {
         margin: 20px;
         font-weight: 600;
         font-size: 22px;
-        color: $color-tertiary;
+        color: $color-text;
         transition: 0.3s ease-in-out;
 
         &--contact {
@@ -47,11 +47,11 @@ a:visited {
             transition: 0.3s ease-in-out;
 
         }
+        &--contact:hover {
+            color: $color-primary;
+            font-size: 25px;
+        }
     }
-    &--contact:hover {
-        color: $color-primary;
-        font-size: 25px;
-}
     &__nav__link:hover {
         color: $color-secondary;
         font-size: 25px;
@@ -100,6 +100,7 @@ main {
         &__intro {
             text-align: center;
             padding-bottom: 50px;
+            font-style: italic;
         }
 
         &__flex {
@@ -124,6 +125,7 @@ main {
             &__text {
                 text-align: center;
                 margin: 5px;
+                margin-bottom: 20px;
             }
         }
     }
@@ -148,7 +150,7 @@ main {
                 box-shadow: 5px 5px $color-secondary;
                 background-color: $color-tertiary;
                 height: auto;
-                width: 200px;
+                width: 250px;
                 padding: 10px;
                 margin: 50px;
                 display: flex;
@@ -158,7 +160,7 @@ main {
 
                 &__img {
                     height: auto;
-                    width: 180px;
+                    width: 220px;
                     margin: 10px;
                 }
 
@@ -167,6 +169,7 @@ main {
                     margin: 12px;
                     text-align: center;
                     color: $color-primary;
+                    font-size: 1.25em;
                 }
             }
         }
