--- a/_components.css
+++ b/_components.css
@@ -4,6 +4,7 @@
   background-color: white;
   margin: 0;
   padding: 0;
+  width: auto;
 }
 
 a:link {
@@ -26,6 +27,8 @@ a:visited {
   justify-content: space-between;
 }
 .header__logo {
+  width: 10vw;
+  height: 10vh;
   color: #c73953;
   font-size: 60px;
   margin: 10px;
@@ -37,13 +40,17 @@ a:visited {
   -webkit-transform: translateY(6px);
 }
 .header__nav__link {
-  margin: 20px;
+  margin: 30px;
   font-weight: 600;
   font-size: 22px;
   color: #524a45;
   transition: 0.3s ease-in-out;
 }
 .header__nav__link--contact {
+  width: 10vw;
+  height: 10vh;
+  font-size: 22px;
+  font-weight: 600;
   border: 1px solid #e4790e;
   padding: 10px;
   border-radius: 5px;
@@ -54,6 +61,10 @@ a:visited {
 }
 .header__nav__link:hover {
   color: #c73953;
+  font-size: 25px;
+}
+.header__nav__link:hover--contact:hover {
+  color: white;
   font-size: 25px;
 }
 
@@ -79,8 +90,8 @@ main .intro__text--emphasis {
   color: #c73953;
 }
 main .intro__img {
-  width: auto;
-  height: 400px;
+  width: 20vw;
+  height: auto;
   border-radius: 30px;
   box-shadow: 10px 10px #e4790e;
   margin-right: 75px;
@@ -90,13 +101,14 @@ main .skills__heading {
 }
 main .skills__intro {
   text-align: center;
-  padding-bottom: 50px;
   font-style: italic;
+  width: 90%;
+  padding: 0 50px 30px 30px;
 }
 main .skills__flex {
   display: flex;
   justify-content: space-around;
-  width: 90%;
+  width: auto;
   margin: auto;
   padding-top: 20px;
 }
