--- a/_components.scss
+++ b/_components.scss
@@ -23,6 +23,8 @@ a:visited {
     justify-content: space-between;
 
     &__logo {
+        width: 10vw;
+        height: 10vh;
         color: $color-secondary;
         font-size: 60px;
         margin: 10px;
@@ -36,13 +38,17 @@ a:visited {
     }
 
     &__nav__link {
-        margin: 20px;
+        margin: 30px;
         font-weight: 600;
         font-size: 22px;
         color: $color-text;
         transition: 0.3s ease-in-out;
 
         &--contact {
+            width: 10vw;
+            height: 10vh;
+            font-size: 22px;
+            font-weight: 600;
             border: 1px solid $color-tertiary;
             padding: 10px;
             border-radius: 5px;
@@ -56,6 +62,10 @@ a:visited {
     &__nav__link:hover {
         color: $color-secondary;
         font-size: 25px;
+        &--contact:hover {
+            color: $color-primary;
+            font-size: 25px;
+        }
     }
 }
 
@@ -84,8 +94,8 @@ main {
         }
 
         &__img {
-            width: auto;
-            height: 400px;
+            width: 20vw;
+            height: auto;
             border-radius: 30px;
             box-shadow: 10px 10px $color-tertiary;
             margin-right: 75px;
@@ -99,14 +109,15 @@ main {
 
         &__intro {
             text-align: center;
-            padding-bottom: 50px;
             font-style: italic;
+            width: 90%;
+            padding: 0 50px 30px 30px;
         }
 
         &__flex {
             display: flex;
             justify-content: space-around;
-            width: 90%;
+            width: auto;
             margin: auto;
             padding-top: 20px;
 
