added real projects in place of the placeholders

--- a/_components.css
+++ b/_components.css
@@ -133,8 +133,8 @@ main .projects__flex__card {
   box-shadow: 5px 5px #c73953;
   background-color: #e4790e;
   height: auto;
-  width: 250px;
-  padding: 10px;
+  width: 35vw;
+  padding: 1rem;
   margin: 50px;
   display: flex;
   flex-direction: column;
@@ -143,8 +143,10 @@ main .projects__flex__card {
 }
 main .projects__flex__card__img {
   height: auto;
-  width: 220px;
-  margin: 10px;
+  width: 30vw;
+}
+main .projects__flex__card__link {
+  background-color: #e4790e;
 }
 main .projects__flex__card__text {
   background-color: #e4790e;
