--- a/_components.scss
+++ b/_components.scss
@@ -150,8 +150,8 @@ main {
                 box-shadow: 5px 5px $color-secondary;
                 background-color: $color-tertiary;
                 height: auto;
-                width: 250px;
-                padding: 10px;
+                width: 35vw;
+                padding: 1rem;
                 margin: 50px;
                 display: flex;
                 flex-direction: column;
@@ -160,8 +160,11 @@ main {
 
                 &__img {
                     height: auto;
-                    width: 220px;
-                    margin: 10px;
+                    width: 30vw;
+                }
+
+                &__link {
+                    background-color: $color-tertiary;
                 }
 
                 &__text {
