--- a/_responsive.scss
+++ b/_responsive.scss
@@ -40,6 +40,10 @@
         flex-wrap: wrap;
     }
 
+    .projects__flex__card {
+        width: 80vw;
+    }
+
     .about {
         height: auto;
 
